--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(OS main.cpp auth.cpp
         Process.cpp
-        Process.h)
+        Process.h
+        scheduler.cpp
+        scheduler.h)
